--- a/client/public/index.html
+++ b/client/public/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang='en'>
   <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />    
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <meta charset='utf-8' />
+    <link rel='icon' href='%PUBLIC_URL%/favicon.ico' />
+    <meta name='viewport' content='width=device-width, initial-scale=1' />    
+    <link rel='manifest' href='%PUBLIC_URL%/manifest.json' />
+    <link href='https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap' rel='stylesheet'>
   </head>
   <body>
-    <div id="root"></div>
+    <div id='root'></div>
   </body>
 </html>
